crates/swc_ecma_parser/tests/test262-error-references/fail/412beffc411b3cb1.js.stderr
error: Expected unicode escape
 --> $DIR/tests/test262-parser/fail/412beffc411b3cb1.js:1:2
  |
1 | a\x
  |  ^

